style.css
/* ... */
.dvtContentSpace{
	/*border-left:1px solid #dedede;
	border-right:1px solid #dedede;
	border-bottom:1px solid #dedede;
	padding-left:0px;*/
	padding: 0;
}

.detailview_row {
	transform: translateX(-3px);
}

.dvtCellLabel, .cellLabel,.cellLabelnew{
	background-color: white;
	color: rgb(90,90,90);
	padding: 10px 8px;
	white-space:nowrap;
	font-weight: bold;
	background: rgb(235,235,235);
	border-right: 3px solid #68b8e1;
	/*border-left: 10px solid white;*/
	border-radius: 7px 0 0 7px;
	transform: translateX(5px);
}

.dvtCellInfo, .cellInfo {
	border-top: 2px solid rgb(230,230,230);
	border-right: 2px solid rgb(230,230,230);
	border-bottom: 2px solid rgb(230,230,230);
	border-radius: 0 7px 7px 0;
	padding-left: 10px;
}

.commentCell {
	border-top: none;
	border-right: 2px solid rgb(230,230,230);
	border-bottom: 2px solid rgb(230,230,230);
	border-left: 2px solid rgb(230,230,230);
	border-radius: 0 0 7px 7px;
	padding: 0;
}

.rightMailMerge {
	border:1px solid #dedede;
}

.rightMailMergeHeader {
	border-bottom:1px solid #ffffff;
	padding:5px;
	background-color:#000000;
	background:  url(images/level2Bg.gif) bottom repeat-x;
	color:#555555;

}

.rightMailMergeContent {
	padding:5px;
	background-color:#ffffff;
}

.detailedViewHeader{

	/*border:1px solid #DDDDDD;*/
	padding:12px;
	/*background:  #dddcdd   url(images/inner.gif) bottom repeat-x;*/
	/*color: #000000;*/
	background: #0079B7;
	color: #fff;
	font-weight: 800;
	text-transform: uppercase;
}

.detailedViewTextBox {
	font-family: "Open Sans", Arial, Helvetica, sans-serif;
	font-size: 13px;
	color: #000000;
	/*border:1px solid #bababa;*/
	/*padding-left:5px;*/
	width:98%;
	border: none;
	margin: 0;
	padding: 4px 0;
	/*background-color:#ffffdd;*/
}

.detailview_table .detailedViewTextBox, .detailview_table .detailedViewTextBoxOn{
    -webkit-animation: color-change 1s infinite;
    -moz-animation: color-change 1s infinite;
    -o-animation: color-change 1s infinite;
    -ms-animation: color-change 1s infinite;
    animation: color-change 1s infinite;
}

.detailedViewTextBoxOn {
	font-family: "Open Sans", Arial, Helvetica, sans-serif;
	font-size: 13px;
	color: #000000;
	/*border:1px solid #bababa;*/
	/*padding-left:5px;*/
	width:98%;
	border: none;
	margin: 0;
	padding: 4px 0;
	/*background-color:#ffffdd;*/
}

/*----------- THE INVENTORY PART OF THE DETAIL VIEW -------------*/
.detailview_inventory_table, .detailview_inventory_table td {
	border-left: 0 !important;
	border-right: 0 !important;
	border-top: 0 !important;
	border-bottom: 0 !important;
	outline:0;
	border-collapse: collapse;
}

.detailview_inventory_subheader, .detailview_inventory_subheader font {
	background: rgb(60,60,60);
	color: white !important;
}

.detailview_inventory_row {
	border-top: 0 !important;
	border-bottom: 1px solid rgb(220,220,220) !important;
}

.detailview_inventory_row:hover {
	background: rgb(240,240,240);
}

.detailview_inventory_npricecell {
	font-weight: bold;
}

.detailview_inventory_totals {
	border: 0;
}

#detailview_inventory_subtotalrow {
	background: rgb(230,230,230);	
}

#detailview_inventory_grandtotrow {
	background: rgb(230,230,230);
	font-weight: bold;
}

#detailview_inventory_grandtotrow td{
	font-size: 15px !important;
}

/* The right sidebar */
#actioncolumn {
	border: none !important;
}

.detailview_actionlinks {
	border-collapse:separate;
	border-spacing: 0 5px;
}

.actionlink td {
	padding: 8px !important;
	background: rgb(230,230,230);
	border-radius: 5px;
	color: rgb(120,120,120);
	font-weight: bold;
}

.actionlink td a:first-of-type {
	display: inline-block;
	width: 20%;
	/*padding: 0 5px 8px 5px;*/
	text-decoration: none;
	color: rgb(120,120,120);
	/*margin: 0 0 8px 0;*/
}

.actionlink td a:nth-of-type(2n) {
	display: inline-block;
	width: 75%;
	vertical-align: top;
	text-align: right;
	text-decoration: none;
	color: rgb(120,120,120);
	/*margin: 0 0 8px 0;*/
	font-size: 13px;
	text-transform: uppercase;
}

.actionlink td a:nth-of-type(2n):after {
	display: inline-block;
	font-family: "icomoon";
	font-size: 16px;
	line-height: 16px;
	content: "\e906";
	transform: rotate(90deg);
	margin: 0 0 0 8px;
}

.actionlink_sendemail td a:first-of-type img {
	display: none;
}

.actionlink_sendemail td a:first-of-type:before {
	display: inline-block;
	font-family: "icomoon";
	font-size: 24px;
	line-height: 24px;
	content: "\e904";
}

.advSearch {
	padding:10px;
	border-left:1px solid #eaeaea;
	border-right:1px solid #eaeaea;
	border-bottom:1px solid #eaeaea;
	overflow:auto;
	width:600px;
	height:150px;
	/*background-color:#ffffef;*/
}

.searchAlph {
	border:1px solid #dadada;
	background-color:#ffffff;
	cursor:pointer;
	width:10px
}

.searchAlphselected {
	border:1px solid #666666;
	background-color:#bbbbbb;
	cursor:pointer;
	width:10px
}

.textbox {
	border:1px solid #999999;
	background-color:#ffffff;
	font-family: "Open Sans", Arial, Helvetica, sans-serif;
	font-size: 11px;
	width:120px;
	padding:2px;
}

.mx {
}

.calListTable td{
	border-bottom:1px solid #efefef;
	border-left:1px solid #efefef;
}

.calDIV {
	width:100%;
	border:1px solid #fff;

}

.calDayHour {
	border-top:1px solid #c5d5ff;
	border-left:1px solid #c5d5ff;
	border-bottom:1px solid #c5d5ff;
	border-right:1px solid #c5d5ff;
	background-color:#eae7da;
}

.calAddEvent {
	position:absolute;
	z-index:10000;
	width:500px;
	left:200px;
	top:150px;
	background-color:#ffffff;
}
.addEventInnerBox {
	border:1px dotted #dadada;
}

.cellNormal {
	border:0px;
	background-color:#ffffff;
}

.EventToDo{

}

.thumbnail{
	background-color:#ffffff;
	padding: 7px;
	border: 1px solid #ddd;
	float: left;
	margin-right: 10px;
	margin-bottom: 15px;
}

.padTab{
	padding-top:0px;
	padding-left:10px;
	padding-bottom:0px;
	vertical-align:top;

}

#company{
	position:relative;
	width:100%;
	height:200px;
	display:block;
	background-color:#FFFFFF;
	white-space:nowrap;
	overflow:auto;
	border:1px solid #CCCCCC;
}

#user{position:relative;left:0px;top:0px;width:100%;display:block;}
/* ... */

